# pip-tool

./: README.md  pyproject.toml
piptool/: cli.py  pypi.py  pypi_project.py
tests/: test_pip_tool.py
