[tool.poetry]
name = "piptool"
version = "0.1.3"
description = ""
authors = ["Eyal Levin <eyalev@gmail.com>"]

[tool.poetry.scripts]
piptool = "piptool.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
printp = "0.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
